WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89487
REGRESSION (120705) : LayerTreeHostQt asserts in debug.
https://bugs.webkit.org/show_bug.cgi?id=89487
Summary
REGRESSION (120705) : LayerTreeHostQt asserts in debug.
Alexis Menard (darktears)
Reported
2012-06-19 11:29:08 PDT
REGRESSION (120705) : LayerTreeHostQt asserts in debug.
Attachments
Patch
(5.34 KB, patch)
2012-06-19 11:31 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.31 KB, patch)
2012-06-20 05:48 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2012-06-19 11:31:51 PDT
Created
attachment 148369
[details]
Patch
Noam Rosenthal
Comment 2
2012-06-19 16:35:58 PDT
Comment on
attachment 148369
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148369&action=review
> Source/WebKit2/ChangeLog:8 > + We tries to call createHandle twice on the same handle when the
Tries -> try
Alexis Menard (darktears)
Comment 3
2012-06-20 05:48:13 PDT
Created
attachment 148541
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-06-20 06:27:15 PDT
Comment on
attachment 148541
[details]
Patch for landing Clearing flags on attachment: 148541 Committed
r120818
: <
http://trac.webkit.org/changeset/120818
>
WebKit Review Bot
Comment 5
2012-06-20 06:27:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug