REGRESSION (120705) : LayerTreeHostQt asserts in debug. https://bugs.webkit.org/show_bug.cgi?id=89487

Reviewed by Noam Rosenthal.

We try to call createHandle twice on the same handle when the
first matching atlas is full. This patch solved the problem by
moving the createHandle call inside UpdateAtlas and call createHandle
only when the atlas is not full. We can also remove the surface()
getter as it is not used anymore.

* WebProcess/WebPage/UpdateAtlas.cpp:
(WebKit::UpdateAtlas::beginPaintingOnAvailableBuffer):
* WebProcess/WebPage/UpdateAtlas.h:
(UpdateAtlas):
* WebProcess/WebPage/qt/LayerTreeHostQt.cpp:
(WebKit::LayerTreeHostQt::beginContentUpdate):


Canonical link: https://commits.webkit.org/107420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120818 268f45cc-cd09-0410-ab3c-d52691b4dbfc